[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "latex-table-generator"
description = "Auto generator latex to table image"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "camelot-py[base]==0.9.0",
    "gradio>=3.36.1",
    "img2table>=1.4.0",
    "imgkit>=1.2.3",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.0.0",
    "pypandoc>=1.14",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]


[tool]
    [tool.ruff]
    target-version = "py310"
    line-length    = 130
    ignore         = ["E402", "F841", "F401", "E203"]
    [tool.hatch.version]
    path = "src/latex_table_generator/__init__.py"
